--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="The professional portfolio of Dr. Hamoudi Benarba, an EFL/ESL Educator, Trainer, and Researcher." />
+    <meta name="author" content="Salah Eddine Medkour" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dr. Hamoudi Benarba - EFL/ESL Educator & Researcher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
