Ready for deployment

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="description" content="The professional portfolio of Dr. Hamoudi Benarba, an EFL/ESL Educator, Trainer, and Researcher." />
     <meta name="author" content="Salah Eddine Medkour" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
